# going_logging

./: .clang-format  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  conf.py.in  doxyfile  goinglogging.code-workspace  index.rst  todo.md  todo.txt
doc/html/: dir_76b9e0f7183267e2940a9178f38db5d2.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  goinglogging_8h.html  goinglogging_8h_source.html  graph_legend.html  index.html  menudata.js  namespacegl.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  defines_0.js  defines_1.js  defines_2.js  enumvalues_1.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
include/: goinglogging.h
include/goinglogging/: goinglogging.h
test/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  doxyfile
test/doc/html/: annotated.html  c__types_8cpp.html  classCustInsOp-members.html  classCustInsOp.html  classTest-members.html  classTest.html  classes.html  color_8cpp.html  cpp__types_8cpp.html  custom_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69f6b0b437b9d7106ae46b3b241ba72b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  menudata.js  output__enabled_8cpp.html  postfix_8cpp.html  prefixes_8cpp.html  run__all_8cpp.html  test_8h_source.html
test/doc/html/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  related_0.js  searchdata.js
test/ground_truth/: c_types.txt  color.txt  cpp_types.txt  custom.txt  l.txt  l_arr.txt  l_mat.txt  output_enabled.txt  postfix.txt  prefixes.txt
test/include/test/: test.h
test/src/: c_types.cpp  color.cpp  cpp_types.cpp  custom.cpp  d.cpp  d_arr.cpp  d_mat.cpp  disabled.cpp  l.cpp  l_arr.cpp  l_mat.cpp  output_enabled.cpp  postfix.cpp  prefixes.cpp  run_all.cpp  test.cpp
